# basic-llvm-lit-testing

./: CMakeLists.txt  ReadMe.md  build-proj.sh  docker-run.sh  x86.Dockerfile
src/: add_123.cpp  mul_123.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in  start-lit.py
test/test_add/: lit.local.cfg  lit_test_add_123_eq_mul.cpp  lit_test_add_123_eq_mul.py
